# jet_python_modules

./: .env.enter  .env.leave  .gitignore  .pytest.ini  _copy_file_structure.py  _copy_for_prompt.py  _copy_for_prompt_refactor.py  _utils_copy_for_prompt.py  create_new_venv.sh  create_new_venv_backup.sh  embeddings.pkl  install_requirements.sh  pyproject.toml  pyrightconfig.json  reinstall_python.sh  requirements-advanced.txt  requirements-backup.txt  requirements-base.txt  requirements-frozen.txt  requirements-jetmacairm1.txt  requirements-local.txt  requirements-server.txt  requirements-utils.txt  requirements.txt
docs/hf_readmes/: SicariusSicariiStuff_Fiendish_LLAMA_3B_README.md  all-MiniLM-L6-v2_README.md  all-minilm-l6-v2-4bit_README.md  all-minilm-l6-v2-6bit_README.md  all-minilm-l6-v2-8bit_README.md  allenai-specter_README.md  bartowski_Hermes-3-Llama-3.2-3B-GGUF_README.md  bert-base-multilingual-cased_README.md  deepseek-r1-distill-qwen-1.5b_README.md  distilbert-base-nli-stsb-mean-tokens_README.md  dolphin3.0-llama3.2-3b-4bit_README.md  gemma-3-12b-it-qat-4bit_README.md  gemma-3-1b-it-qat-4bit_README.md  gemma-3-4b-it-qat-4bit_README.md  granite-embedding:278m_README.md  jina-embeddings-v2-base_README.md  jina-embeddings-v2-small_README.md  jonatasgrosman_wav2vec2-large-xlsr-53-japanese_README.md  kotoba-tech_kotoba-whisper-bilingual-v1.0-faster_README.md  kotoba-tech_kotoba-whisper-v2.0-faster_README.md  kotoba-tech_kotoba-whisper-v2.0_README.md  litagin_anime-whisper_README.md  llama-3.1-8b-instruct-4bit_README.md  llama-3.2-1b-instruct-4bit_README.md  mistral-7b-instruct_README.md  mistral-nemo-instruct-2407-4bit_README.md  nomic-embed-text-v2-moe_README.md  paraphrase-MiniLM-L12-v2_README.md  paraphrase-multilingual_README.md  pyannote_embedding_README.md  qwen1.5-0.5b-chat-4bit_README.md  qwen2.5-14b-instruct-4bit_README.md  qwen2.5-coder-14b-instruct-4bit_README.md  qwen3-0.6b-4bit-dwq-053125_README.md  qwen3-0.6b-4bit_README.md  qwen3-1.7b-3bit_README.md  qwen3-1.7b-4bit-dwq-053125_README.md  qwen3-1.7b-4bit_README.md  qwen3-4b-3bit_README.md  qwen3-8b-4bit_README.md  (+8 more)
examples/: clustering_examples.py  test_clustering_examples.py  test_html_node_searcher_examples.py
jet/: __init__.py  globals.py
jet/_token/: http_handler.py  test_count_tokens.py  test_header_utils.py  test_token_utils.py  token_utils.py
jet/_types/: __init__.py  db.py  validation.py
jet/actions/: __init__.py  autocomplete_prompts_generator.py  faiss_search.py  fusion_search.py  generation.py  initialize_redis_caches.py  intervew_qa_generator.py  prompts_generator.py  sources_generator.py  test_generation.py  vector_semantic_search.py
jet/audio/: audio_compressor.py  audio_context_transcriber.py  audio_duration.py  audio_file_analyzer.py  audio_file_transcriber.py  audio_norm.py  audio_search.py  audio_search2.py  audio_search3.py  audio_search4.py  audio_search5.py  audio_sr.py  audio_system_transcriber.py  audio_types.py  audio_waveform.py  large_audio_transcriber.py  live_speech_detection.py  live_speech_translator.py  record_mic.py  record_mic_speech_detection.py  record_mic_stream.py  sounddevice_selection.py  speech_detector.py  speech_segments_buffer.py  stream_mic.py  transcribe_utils.py  transcription_utils.py  tts_engine.py  utils.py
jet/automation/: selenium.py
jet/cache/: cache_manager.py  redis.py
jet/code/: __init__.py  html_to_markdown_analyzer.py  html_to_markdown_parser.py  html_utils.py  markdown_analyzer.py  markdown_code_extractor.py  markdown_types.py  markdown_utils.py  python_code_extractor.py  rst_code_extractor.py  run_markdown_code_extractor.py  splitter_markdown_utils.py  splitter_markdown_utils_old.py  test_markdown_code_extractor.py  test_python_code_extractor.py  test_splitter_markdown_utils.py  test_utils.py  utils.py
jet/data/: base.py  header_docs.py  header_types.py  header_utils.py  sample_diverse_docs.py  sample_diverse_headers.py  sample_diverse_texts.py  sample_diverse_urls.py  stratified_sampler.py  test_base.py  test_sample_diverse_urls.py  test_stratified_sampler.py  test_url_sampler.py  test_utils.py  url_sampler.py  utils.py
jet/datasets/: filter_ja_en_translation_samples.py
jet/db/: helpers.py
jet/decorators/: error.py  function.py  redis_wrappers.py  test_error.py  test_redis.py  timer.py
jet/executor/: __init__.py  command.py  python_runner.py
jet/features/: eval_search_and_chat.py  eval_tasks.py  eval_worker.py  nltk_search.py  nltk_utils.py  queue_config.py  rag_llm_generation.py  scrape_search_chat.py  search_and_chat.py  semantic_search.py  test_eval_search_and_chat.py  test_nltk_search.py  test_nltk_utils.py
jet/features/web_retrieval_project/: README.md  main.py  pyproject.toml  requirements.txt
jet/features/web_retrieval_project/src/: indexer.py  retriever.py  scraper.py  types.py
jet/features/web_retrieval_project/tests/: test_indexer.py  test_retriever.py  test_scraper.py
jet/file/: __init__.py  search.py  test_search.py  test_validation.py  utils.py  validation.py
jet/formatters/: python.py
jet/helpers/: markdown_reader.py  object.py
jet/libs/: .gitignore
jet/llm/: __init__.py  benchmarks.py  config.py  embeddings.py  generation.py  llm.py  llm_generator.py  llm_types.py  logger_utils.py  memory.py  model.py  models.py  scoring.py  search.py  similarity.py  summarizer.py  test_similarity.py  test_summarizer.py
jet/logger/: __init__.py  config.py  logger.py  test_timer.py  timer.py  utils.py
jet/mac_memory/: swap_used.py
jet/memory/: config.py  httpx.py  lru_cache.py  memgraph.py  memgraph_types.py  test_lru_cache.py  utils.py
jet/mocks/: mock_tokenizer.py
jet/models/: base.py  config.py  constants.py  convert.py  download_hf_gguf_model.py  download_hf_model.py  download_hf_model_base.py  download_hf_tokenizer_config.py  download_hf_utils.py  download_onnx_model.py  download_onnx_models.py  extract_hf_readme_code.py  model_types.py  onnx_inference.py  onnx_model_checker.py  resolve_onnx_symlinks.sh  utils.py
jet/scrapers/: utils.py  (+11 more)
visualization/: plot_topics.py  test_visualize_embeddings.py
(+3227 files in other folders)
