[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jet_global_packages_project"
version = "0.1.0"
description = "Jet's Global Packages Integration"
authors = [{ name = "Jethro Estrada", email = "jethro@example.com" }]
dependencies = []

# [tool.setuptools]
# # Include editable dependencies from local paths
# packages = [
#     "/Users/jethroestrada/Desktop/External_Projects/Jet_Projects/jet_python_modules/jet/shared_modules",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/starlette",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/python-ghostscript",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/camelot",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/faiss",
#     # "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/openai-python/src",
#     # "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/visualization/deeplake",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-core",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/llms/llama-index-llms-langchain",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/llms/llama-index-llms-openai",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/llms/llama-index-llms-ollama",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/embeddings/llama-index-embeddings-openai",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/embeddings/llama-index-embeddings-ollama",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/embeddings/llama-index-embeddings-huggingface",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/postprocessor/llama-index-postprocessor-flag-embedding-reranker",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/readers/llama-index-readers-wikipedia",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/readers/llama-index-readers-file",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/readers/llama-index-readers-llama-parse",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/readers/llama-index-readers-web",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/indices/llama-index-indices-managed-llama-cloud",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/question_gen/llama-index-question-gen-openai",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/multi_modal_llms/llama-index-multi-modal-llms-openai",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/vector_stores/llama-index-vector-stores-chroma",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/retrievers/llama-index-retrievers-bm25",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/retrievers/llama-index-retrievers-videodb",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/agent/llama-index-agent-openai",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/program/llama-index-program-openai",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/extractors/llama-index-extractors-entity",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/readers/llama-index-readers-pdf-table",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-packs/llama-index-packs-longrag",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/memory/llama-index-memory-mem0",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/graph_stores/llama-index-graph-stores-neo4j",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-packs/llama-index-packs-ragatouille-retriever",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-utils/llama-index-utils-workflow",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/program/llama-index-program-guidance",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-packs/llama-index-packs-neo4j-query-engine",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/readers/llama-index-readers-github",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-experimental",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/vector_stores/llama-index-vector-stores-deeplake",
#     # "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/graph_rag/llama-index-graph-rag-cognee",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/llama_index/llama-index-integrations/callbacks/llama-index-callbacks-aim",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/langchain-experimental/libs/experimental",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/langgraph/libs/langgraph",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/langgraph/libs/checkpoint",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/langsmith-sdk/python",
#     "/Users/jethroestrada/Desktop/External_Projects/AI/chatbot/outlines",
#     # "/Users/jethroestrada/Desktop/External_Projects/AI/chatbot/litellm",
#     "/Users/jethroestrada/Desktop/External_Projects/2024BoilerplateBaseTemplates/proxy_servers/mitmproxy",
#     "/Users/jethroestrada/Desktop/External_Projects/Jet_Projects/jet_shared_modules",
#     "/Users/jethroestrada/Desktop/External_Projects/Jet_Projects/jet_python_modules",
#     "/Users/jethroestrada/Desktop/External_Projects/Jet_Projects/jet_python_modules/.venv/lib/python3.12/site-packages",
#     # "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/langchain/libs/community",
#     # "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/langchain/libs/partners/ollama",
#     # "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/langchain/libs/langchain",
#     # "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/langchain/libs/core/tests",
#     # "/Users/jethroestrada/Desktop/External_Projects/AI/repo-libs/langchain/libs/core",
#     "/Users/jethroestrada/.pyenv/versions/3.12.7/lib/python3.12",
# ]
