# Configures pytest and project metadata.

# [tool.pytest.ini_options]
# python_files = "test_*.py"
# python_functions = "test_*"
# addopts = "--strict-markers --verbose"

# [project]
# name = "web_retrieval_project"
# version = "0.1.0"
# dependencies = [
#     "langchain==0.2.17",
#     "langchain-community==0.2.17",
#     "langchain-openai==0.1.25",
#     "beautifulsoup4==4.12.3",
#     "faiss-cpu==1.9.0",
#     "pytest==8.3.3"
# ]
